# openscad-tools

./: CMakeLists.txt  README.md
examples/platinum/: hddcase.scad  test.scad
lib/: all.scad  constraints.scad  geometry.scad  guides.scad  lasercut.scad  math.scad  mechanical.scad  multipart.scad  platinum.scad  preprocess.scad  transform.scad  types.scad  util.scad
py/openscadutil/: __init__.py  constraints.py  csg.py  guides.py  info.py  storage.py  types.py
py/openscadutil/visitors/: markers.py
resources/: visicut-mapping.xml  visicut-transform.xml
src/: compute.cpp  compute.h  finger-faces.cpp  format-stl.cpp  format-stl.h  formats.cpp  formats.h  types.cpp  types.h
